--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">I am here</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps_activityv2">Map</string>
 </resources>
