add custom button styling and modify the manifest to establish hierarchical relationships and a launch activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">I am here</string>
+    <string name="app_name">Bivouac: a swarm reporter</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_maps_activityv2">Map</string>
     <string name="title_activity_login">Sign in</string>
